--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-*
-{
+/*CSS General*/
+*{
     margin: 0;
     padding: 0;
 }
@@ -17,6 +17,20 @@ h1
 .pointOrange{    /* Mon point orange de mon entete*/
     color : #ff7a00; 
 }
+.wrapper{
+    width:940px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+ul {
+    list-style: none;
+}
+a {
+    text-decoration: none;
+    color: #444;
+}
+
+/* HEADER*/
 header
 {
     height: 120px;    
@@ -24,4 +38,19 @@ header
 header h1  /* pour tout les h1 qui se trouvent dans le header*/
 {
     float: left;
+    margin-top: 32px;
+}
+header nav 
+{
+    float: right; 
+    margin-top: 50px;
+}
+header nav ul li {
+    display: inline-block ; 
+    
+}
+header nav ul li a {
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-left: 20px;
 }
